<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="59dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="189dp"
        android:text="@string/user" />

    <TextView
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user"
        android:layout_alignStart="@+id/user"
        android:layout_below="@+id/user"
        android:layout_marginTop="57dp"
        android:text="@string/pass" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pass"
        android:layout_marginBottom="61dp"
        android:layout_marginLeft="47dp"
        android:layout_marginStart="47dp"
        android:layout_toEndOf="@+id/pass"
        android:layout_toRightOf="@+id/pass"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/contra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pass"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usuario"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:onClick="enviar_datos"
        android:text="@string/login" />



    <TextView
        android:id="@+id/first_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/login"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/login"
        android:layout_marginBottom="36dp"
        android:text="@string/first_activity" />

</RelativeLayout>